--- a/recipe/testdata/missing-source-url/recipe.yaml
+++ b/recipe/testdata/missing-source-url/recipe.yaml
@@ -10,7 +10,7 @@ source:
   strip: 1
 
 control:
-  description: A long package description providing us with enough information on the upstream software.
+  description: A long package description providing us with information on the upstream software.
 
 install:
   recipe:
