--- a/recipe/testdata/missing-source/recipe.yaml
+++ b/recipe/testdata/missing-source/recipe.yaml
@@ -7,7 +7,7 @@ maintainer: Foo Bar <foo@example.org>
 homepage: https://example.org/
 
 control:
-  description: A long package description providing us with enough information on the upstream software.
+  description: A long package description providing us with information on the upstream software.
 
 install:
   recipe:
