--- a/recipe/testdata/valid/recipe.yaml
+++ b/recipe/testdata/valid/recipe.yaml
@@ -29,7 +29,7 @@ control:
   - foobaz
   conflicts:
   - foobarbaz
-  description: A long package description providing us with enough information on the upstream software.
+  description: A long package description providing us with information on the upstream software.
 
 install:
   recipe:
