--- a/recipe/testdata/unsupported-version/recipe.yaml
+++ b/recipe/testdata/unsupported-version/recipe.yaml
@@ -10,7 +10,7 @@ source:
   url: https://example.org/path/to/foo-{{ .Version }}.{{ .Arch }}.tar.gz
 
 control:
-  description: A long package description providing us with enough information on the upstream software.
+  description: A long package description providing us with information on the upstream software.
 
 install:
   recipe:
