Add test for control-description-wrap linting rule

--- a/lint/testdata/invalid-name/recipe.yaml
+++ b/lint/testdata/invalid-name/recipe.yaml
@@ -29,7 +29,9 @@ control:
   - foobaz
   conflicts:
   - foobarbaz
-  description: A long package description providing us with information on the upstream software.
+  description: |
+    A long package description providing us with information on the
+    upstream software.
 
 install:
   recipe:
